--- a/index.html
+++ b/index.html
@@ -635,9 +635,9 @@ Vocês entre risadas relembram de como a situação foi cômica
 
 &quot;Mas então, tá precisando de algo, meu chegado?&quot; - pergunta ele
 
-[[&quot;Você recebeu um arquivo que dizia algo sobre uma cura?&quot; |honesto]] - Sendo honesto, você pergunta sobre a manchete
+-[[&quot;Você recebeu um arquivo que dizia algo sobre uma cura?&quot; |honesto]] - Sendo honesto, você pergunta sobre a manchete
 
-[[&quot;Recentemente uma manchete foi enviada para você por engano, poderia me passar ela?&quot; |omitir]] - Você prefere omitir a verdade à José, não querendo envolvê-lo no problema</tw-passagedata><tw-passagedata pid="34" name="&quot;É bom você lembrar, isso acelera as coisas&quot;" tags="" position="2500,1675" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Recentemente uma manchete foi enviada para você por engano, poderia me passar ela?&quot; |omitir]] - Você prefere omitir a verdade à José, não querendo envolvê-lo no problema</tw-passagedata><tw-passagedata pid="34" name="&quot;É bom você lembrar, isso acelera as coisas&quot;" tags="" position="2500,1675" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Esta tudo bem, mano? Você ta parecendo o Desmon, cara.&quot;
 
 Você, quando é comparado a Desmon, se arrepende um pouco de ter sido tão direto
@@ -656,10 +656,10 @@ Ver a pessoa mais bem humorada na empresa tensa desse jeito é preocupante
 
 &lt;&lt;if $MancheteP eq 1&gt;&gt;[[&quot;Problema ou não, aquela era a escolha certa&quot;]]
 
-[[&quot;Pensando bem, fazer aquilo só chamou uma atenção indesejada pra mim&quot;]]
+-[[&quot;Pensando bem, fazer aquilo só chamou uma atenção indesejada pra mim&quot;]]
 &lt;&lt;elseif $MancheteP gt 1&gt;&gt;[[&quot;Agora eu me arrependo amargamente disso&quot;]]
 
-[[&quot;Foi o melhor jeito de não chamar atenção&quot;]]
+-[[&quot;Foi o melhor jeito de não chamar atenção&quot;]]
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="36" name="omitir" tags="" position="2500,1825" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Nossa cara... Eu juro que não sabia, juro que foi tudo um engano!&quot;
 
@@ -667,9 +667,9 @@ Você pode ver a preocupação nas mensagens de josé, talvez você possa usar i
 
 &quot;Tem algo que eu possa fazer pra isso não virar um problema pra mim?&quot;
 
-[[&quot;Relaxa posso resolver a situação, mas vou precisar saber de algo antes&quot;|chantagem]]- tranquilizando josé você pode conseguir o que precisa
+-[[&quot;Relaxa posso resolver a situação, mas vou precisar saber de algo antes&quot;|chantagem]]- tranquilizando josé você pode conseguir o que precisa
 
-[[&quot;Pra você?! Isso também está me prejudicando muito!&quot;|ameaça]]- Talvez através da pressão você consiga informações mais rápido</tw-passagedata><tw-passagedata pid="37" name="StoryInit" tags="" position="2500,450" size="100,100">&lt;!---Musica tema 1----------------------------------------&gt;
+-[[&quot;Pra você?! Isso também está me prejudicando muito!&quot;|ameaça]]- Talvez através da pressão você consiga informações mais rápido</tw-passagedata><tw-passagedata pid="37" name="StoryInit" tags="" position="2500,450" size="100,100">&lt;!---Musica tema 1----------------------------------------&gt;
 &lt;&lt;set _bgm = setup.SoundPath + &quot;sounds/ludowic.mp3&quot;&gt;&gt;
 &lt;&lt;cacheaudio &quot;cyber_bgm&quot; &quot;sounds/ludowic.mp3&quot;&gt;&gt;
 &lt;&lt;createaudiogroup &quot;:ui&quot;&gt;&gt;
@@ -753,9 +753,9 @@ Você pode ver a preocupação nas mensagens de josé, talvez você possa usar i
 [[&quot;voltando ao assunto principal...&quot;|A verdade]]</tw-passagedata><tw-passagedata pid="42" name="A verdade" tags="" position="2325,2175" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Admiro essa honestidade toda Vanno, se eu pudesse eu te ajudava nessa pesquisa, mas minha mãe notaria...&quot;
 
-[[&quot;Sua... mãe?&quot;|A verdade 2]]
+-[[&quot;Sua... mãe?&quot;|A verdade 2]]
 
-[[&quot;Você já não passou dessa idade não?&quot;|A verdade 2.5]]</tw-passagedata><tw-passagedata pid="43" name="Atender telefone" tags="" position="1225,950" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Você já não passou dessa idade não?&quot;|A verdade 2.5]]</tw-passagedata><tw-passagedata pid="43" name="Atender telefone" tags="" position="1225,950" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &lt;center&gt;&lt;img id=&quot;imgs&quot; src=&quot;images/boss.png&quot;&gt;&lt;/center&gt;
 &lt;&lt;if $MancheteP eq 1&gt;&gt;&quot;VANNO, TODOS OS DIRETORES DA &quot;ZER0 HORA&quot; NÃO PARAM DE RECEBER LIGAÇÕES SOBRE A MATÉRIA PUBLICADA. VOCÊ ME DESOBEDECEU E SUA ATITUTE TERÁ CONSEQUÊNCIAS!&quot;
 
@@ -827,17 +827,17 @@ Agora, sem mais explicações, você já está preparado para [[jogar|prólogo]]
 
 Se seu chefe souber que você esta procurando mais informações sobre a manchete, ele com certeza vai brigar com você&lt;&lt;if $MancheteP eq 1&gt;&gt; novamente.&lt;&lt;else&gt;&gt;.&lt;&lt;/if&gt;&gt;
 
-[[&quot;Relaxa, ninguém precisa saber de nada, José&quot;|Troca de favores]]
+-[[&quot;Relaxa, ninguém precisa saber de nada, José&quot;|Troca de favores]]
 
-[[&quot;Acho que eu exagerei josé... não precisa disso, na verdade eu estava tentando descobrir mais sobre a manchete, ver aquilo tudo me preocupou&quot;|honesto]] - Você com peso na conciencia fala a verdade à josé.</tw-passagedata><tw-passagedata pid="51" name="ameaça" tags="" position="2650,2000" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Acho que eu exagerei josé... não precisa disso, na verdade eu estava tentando descobrir mais sobre a manchete, ver aquilo tudo me preocupou&quot;|honesto]] - Você com peso na conciencia fala a verdade à josé.</tw-passagedata><tw-passagedata pid="51" name="ameaça" tags="" position="2650,2000" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Foi mal cara! Estou até enviando uma mensagem para nosso chefe explicando tudo agora. Desculpa mesmo...&quot; - Fala josé após ficar um tempo sem responder
 
 Se seu chefe souber que você está procurando mais informações sobre a manchete, ele com certeza vai brigar com você&lt;&lt;if $MancheteP eq 1&gt;&gt; novamente.&lt;&lt;else&gt;&gt;.&lt;&lt;/if&gt;&gt;
 
 
-[[&quot;Precisa disso não, só me fala oque você sabe e tá tudo certo&quot;|Curto e Grosso]] - curto e direto, para que ele te responda antes chamar o chefe.
+-[[&quot;Precisa disso não, só me fala oque você sabe e tá tudo certo&quot;|Curto e Grosso]] - curto e direto, para que ele te responda antes chamar o chefe.
 
-[[&quot;Acho que eu exagerei josé... não precisa disso, na verdade eu estava tentando descobrir mais sobre a manchete, ver aquilo tudo me preocupou&quot;|honesto]] - Você com peso na conciencia fala a verdade à josé.</tw-passagedata><tw-passagedata pid="52" name="Curto e Grosso" tags="" position="2725,2150" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Acho que eu exagerei josé... não precisa disso, na verdade eu estava tentando descobrir mais sobre a manchete, ver aquilo tudo me preocupou&quot;|honesto]] - Você com peso na conciencia fala a verdade à josé.</tw-passagedata><tw-passagedata pid="52" name="Curto e Grosso" tags="" position="2725,2150" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Precisa sim cara, eu te prejudiquei e quero me redimir. Relaxa que o chefe já sabe de tudo&quot;
 
 Ouvir isso te faz sentir um frio na espinha, você então olha pro seu celular e vê o numero de notificações aumentando, logo depois uma [[ligação do seu chefe|Briga do Chefe]] aparece em seu celular.
@@ -878,9 +878,9 @@ Isso só te deixa mais confuso, oque uma escavação teria haver com a cura?
 
 &quot;Mas isso é o pouco que eu sei, por favor não fala para ninguém o que eu te disse&quot;
 
-[[&quot;Prometo que não vou falar nada.&quot;| Promessa é divida]]
+-[[&quot;Prometo que não vou falar nada.&quot;| Promessa é divida]]
 
-[[&quot;Desculpa, mas não posso prometer nada&quot;| Falta de promessa]]</tw-passagedata><tw-passagedata pid="56" name=" Promessa é divida" tags="" position="2525,2600" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Desculpa, mas não posso prometer nada&quot;| Falta de promessa]]</tw-passagedata><tw-passagedata pid="56" name=" Promessa é divida" tags="" position="2525,2600" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Obrigado cara...&quot; - Diz José se acalmando e aos poucos voltando a trabalhar.
 
 Logo após essa conversa um pouco pesada, você percebe que seu e-mail enviado a Billy Jordan foi [[respondido]]
@@ -920,18 +920,18 @@ Você não perde tempo e, assim que termina de ler, [[vai direto para o lugar in
 
 Ouvir isso te faz perceber a gigantesca oportunidade que tem na sua frente.
 
-[[&quot;Você por um acaso nunca ouviu nada vindo dela não?&quot;|A verdade 3]]
+-[[&quot;Você por um acaso nunca ouviu nada vindo dela não?&quot;|A verdade 3]]
 
-[[&quot;Acho que pedir para você perguntar algo a ela seria muito não é?&quot;|A verdade 3.5]]</tw-passagedata><tw-passagedata pid="60" name="A verdade 3" tags="" position="2250,2450" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Acho que pedir para você perguntar algo a ela seria muito não é?&quot;|A verdade 3.5]]</tw-passagedata><tw-passagedata pid="60" name="A verdade 3" tags="" position="2250,2450" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Pelo que ela tem dito, a ARCH CORP tem gasto parte do dinheiro necessário para produzir mais equipamentos hospitalares em outra coisa... Algo que envolve uma escavação, talvez?&quot;
 
 Isso só te deixa mais confuso, oque uma escavação teria haver com a cura?
 
 &quot;É o pouco que eu sei... se descbrir algo me avisa por favor mano&quot;
 
-[[&quot;Tudo bem, assim que eu souber de algo eu te aviso&quot;|Avisar]]
+-[[&quot;Tudo bem, assim que eu souber de algo eu te aviso&quot;|Avisar]]
 
-[[&quot;Desculpa, mas eu ja estou me arriscando, não quero te colocar em risco também&quot;|Manter Longe]]</tw-passagedata><tw-passagedata pid="61" name="Avisar" tags="" position="2250,2600" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Desculpa, mas eu ja estou me arriscando, não quero te colocar em risco também&quot;|Manter Longe]]</tw-passagedata><tw-passagedata pid="61" name="Avisar" tags="" position="2250,2600" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Valeu cara!&quot; - Fala José aliviado
 
 Após toda essa conversa com José você percebe que seu e-mail enviado a Billy Jordan foi [[respondido]]
@@ -960,18 +960,18 @@ Mas seu pedido é negado. Já era esperado que não fossem aceitar ter uma entre
 
 Ouvir isso te faz perceber a gigantesca oportunidade que tem na sua frente.
 
-[[&quot;Acho que pedir para você perguntar algo a ela seria muito não é?&quot;|A verdade 3.5]]
+-[[&quot;Acho que pedir para você perguntar algo a ela seria muito não é?&quot;|A verdade 3.5]]
 
-[[&quot;Você por um acaso nunca ouviu nada vindo dela não?&quot;|A verdade 3]]</tw-passagedata><tw-passagedata pid="65" name="A verdade 3.5" tags="" position="2400,2450" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Você por um acaso nunca ouviu nada vindo dela não?&quot;|A verdade 3]]</tw-passagedata><tw-passagedata pid="65" name="A verdade 3.5" tags="" position="2400,2450" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Eu já até tentei perguntar algo, mas ela nunca vai falar, mesmo assim eu ainda ouvi ela falando algo sobre a ARCH CORP ter gasto parte do dinheiro necessário para produzir mais equipamentos hospitalares em outra coisa... Algo que envolve uma escavação, talvez?&quot;
 
 Isso só te deixa mais confuso, oque uma escavação teria haver com a cura?
 
 &quot;É o pouco que eu sei... se descbrir algo me avisa por favor mano&quot;
 
-[[&quot;Tudo bem, assim que eu souber de algo eu te aviso&quot;|Avisar]]
+-[[&quot;Tudo bem, assim que eu souber de algo eu te aviso&quot;|Avisar]]
 
-[[&quot;Desculpa, mas eu ja estou me arriscando, não quero te colocar em risco também&quot;|Manter Longe]]</tw-passagedata><tw-passagedata pid="66" name="Homem Livre 2" tags="" position="375,2275" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+-[[&quot;Desculpa, mas eu ja estou me arriscando, não quero te colocar em risco também&quot;|Manter Longe]]</tw-passagedata><tw-passagedata pid="66" name="Homem Livre 2" tags="" position="375,2275" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 
 &quot;Exatamente por isso que nós devemos mostrar que com o culto todos estão seguros, mas ainda não são muitos os que acreditam...&quot; - Diz Roberto com uma expressão de decepção
 
@@ -1562,13 +1562,11 @@ Ela abre alguns arquivos holográficos e vira-os para você
 [[Claro que não posso aceitar um absurdo desses!|Tenta fugir]] - Em desepero você tenta fugir do local</tw-passagedata><tw-passagedata pid="134" name="Tenta fugir" tags="" position="5100,2800" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 Você dispara pela porta, corre até a saida da sala, mas ainda se ve com poucas apenas algumas opções:
 
-[[Seguir para o elevador|elevador]]
+[[seguir para o elevador|elevador]], [[seguir para escada|escada]] ou ate mesmo [[Pular pela janela|janela]]?
 
-[[Seguir para escada|escada]]
+Ou uma apósta muito arriscada como, [[fazer uma live com os fãs do ZER0 HORA|live]], para que se você for atacado mais pessoas verão
 
-[[Fazer uma live com os fãs do ZER0 HORA|live]], para que se você for atacado mais pessoas verão
 
-[[Pular pela janela|janela]]
 
 &lt;&lt;audio arch_bgm stop&gt;&gt;
 &lt;&lt;audio run_bgm volume 0.05 play loop&gt;&gt;</tw-passagedata><tw-passagedata pid="135" name="elevador" tags="" position="5125,2400" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
@@ -1717,7 +1715,7 @@ Ela puxa alguns documentos em holograma e os direciona a você. Algumas fotos mo
 
 Você fica assustado ao ouvir tanta informação que não aprece ter sentido
 
-[[|EscavaçãoA]] - Determinado de sua escolha, você vai até o fim dessa historia
+[[Não posso confiar no que vocês falam, então é claro que aceito ver com meus própios olhos|EscavaçãoA]] - Determinado de sua escolha, você vai até o fim dessa historia
 
 [[Não tem como eu aceitar ir a lugar nenhum, tudo que você falou é loucura|Tarde demais]] - Diz você assustado enquanto se afasta</tw-passagedata><tw-passagedata pid="158" name="EscavaçãoF" tags="" position="250,3000" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &quot;Com certeza eles ainda vão demorar um tempo para decifrar nossos arquivos, você tem esse tempo para ir até lá e recolher nossas relíquias&quot;
